<resources>
    <string name="app_name">EasyTime</string>

    <string name="empty_fragment">Empty fragment</string>

    <string name="no_data">No data</string>

    <!--login activity-->
    <string name="login_title">Easy time</string>
    <string name="login_name_hint">Name</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>

    <!--main navigation menu-->
    <string name="nav_projects">Projects</string>
    <string name="nav_stock">Stock</string>
    <string name="nav_clients">Clients</string>
    <string name="nav_settings">Settings</string>

    <!--projects list headers-->
    <string name="header_projects">Projects</string>
    <string name="header_orders">Orders</string>
    <string name="header_objects">Objects</string>

    <!--placeholders-->
    <string name="placeholder_job_name">Repair museum</string>
    <string name="placeholder_job_number">#63365</string>
    <string name="placeholder_job_status">Active</string>
    <string name="placeholder_job_customer">Paralect LLC</string>
    <string name="placeholder_address_date">Minsk, Nekrasova 7, 12.00 AM</string>
    <string name="placeholder_company_name">Paralect</string>
    <string name="placeholder_no_jobs">no jobs</string>
    <string name="placeholder_job_term">11.12.17 – 13.01.18</string>
    <string name="placeholder_job_type">Object</string>
    <string name="placeholder_customer_name">Ignat Matveenko</string>
    <string name="placeholder_customer_address">Minsk, Nekrasova 7, office 504</string>
    <string name="placeholder_project_description">Необходимо заменить все старые двери на новые модели №323523</string>
    <string name="placeholder_project_info_contact">Sergiy</string>
    <string name="placeholder_project_info_address">Minsk, Culman 11/6</string>
    <string name="placeholder_project_info_delivery_time">11.00 – 12.00 AM</string>
    <string name="placeholder_project_info_client">Paralect</string>
    <string name="placeholder_user_name">Ivan Petrov</string>
    <string name="placeholder_worker">Swiss1mobile</string>
    <string name="placeholder_material_name">Air filter model 1</string>
    <string name="placeholder_material_number">#66565</string>
    <string name="placeholder_activity_date">30 November</string>
    <string name="placeholder_keypad_number">1</string>
    <string name="placeholder_material_count">22</string>
    <string name="placeholder_company">Company</string>
    <string name="placeholder_company_name_for_expenses">LLC Mobexs</string>
    <string name="placeholder_project_expense">Repair</string>
    <string name="placeholder_expense_time">2:20</string>
    <string name="placeholder_price_per_unit">20 CHF</string>
    <string name="placeholder_project_expense_price">80 CHF</string>
    <string name="placeholder_chosen_count">0 item selected</string>

    <!--materials-->
    <string name="title_materials">Materials</string>
    <string name="delete_materials">Delete</string>
    <string name="add_your_materials">Add your materials</string>
    <string name="add_time">Add time</string>
    <string name="add_material">Add material</string>
    <string name="add_expenses">Add expenses</string>
    <string name="nav_search">Search</string>
    <string name="nav_new">New</string>
    <string name="nav_trash">Delete</string>
    <string name="material_number">#%d</string>
    <string name="materials_count">count</string>
    <string name="perform">Perform</string>

    <!--job info-->
    <string name="job_name_and_address">%d: %s</string>
    <string name="projects">Projects</string>
    <string name="orders">Orders</string>
    <string name="objects">Objects</string>
    <string name="job_number">#%d</string>

    <!--contact-->
    <string name="call">Call</string>
    <string name="email">Mail</string>
    <string name="map">Map</string>

    <!--project info-->
    <string name="activity">Activity</string>
    <string name="information">Information</string>
    <string name="status">Status</string>
    <string name="instructions">Instructions</string>
    <string name="other_employees">Other employees</string>
    <string name="client">Client</string>

    <string name="instructions_contact">Contact person</string>
    <string name="instructions_address">Delivery address</string>
    <string name="instructions_time">Time</string>

    <string name="add_your_activities">Add your activities</string>
    <string name="add_your_materials_stock">Nothing here…\nPlease add materials to stock</string>
    <string name="choose_date">Nothing here…\nPlease choose another date</string>
    <string name="change_filter_params">Nothing here…\nPlease change filter params</string>
    <string name="nothing_here">Nothing here…\nThe client doesn\'t have active jobs</string>

    <!--Project details-->
    <string name="project_detail_send">Send</string>
    <string name="save">Save</string>
    <string name="project_detail_sign">Add signature</string>
    <string name="project_detail_discount">Discount</string>
    <string name="project_detail_completion">Completion</string>
    <string name="project_detail_add_photo">Add photo</string>
    <string name="project_detail_change_photo">Change</string>

    <!--project expenses-->
    <string name="project_number">Project #%d</string>
    <string name="expense_price">CHF %d</string>
    <string name="total_expense">Total</string>

    <!--signature-->
    <string name="signature_title">Signature</string>
    <string name="signature_switcher">Sign yourself</string>
    <string name="signature_sign">Sign</string>
    <string name="signature_clear">Clear</string>
    <string name="sign_here">Sign here</string>

    <!--settings-->
    <string name="help">Help</string>
    <string name="send_feedback">Send feedback</string>
    <string name="logout">Logout</string>
    <string name="about_app">EasyTime for Android v1.01\nCopyright 2018. All Rights Reserved</string>

    <!--keypad-->
    <string name="next">Next</string>
    <string name="done">Done</string>

    <!--expenses-->
    <string name="basic">Basic</string>
    <string name="often_used">Often used</string>
    <string name="expenses">Expenses</string>
    <string name="driving">Driving</string>
    <string name="other_expenses">Other expenses</string>
    <string name="expenses_skip">Skip</string>

    <!--expense creator dialog-->
    <string name="create_new_expense">Create new expense?</string>
    <string name="enter_name">Enter name</string>
    <string name="placeholder_for_expense_name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>

    <!--Discount dialog-->
    <string name="discount_title">Add discount?</string>
    <string name="discount_hint">CHF</string>
    <string name="discount_value">\%%&#160;&#160;&#160;%s CHF</string>

    <!--material expenses-->
    <string name="item_selected">%d item(s) selected</string>
    <string name="add_materials">Add %d material(s)</string>
    <string name="confirm_materials">Confirm %d materials</string>
    <string name="go_to_stock">Go to stock!</string>

    <!--time expenses-->
    <string name="time_exp_title">New time</string>
    <string name="time_exp_hours">Hours</string>
    <string name="time_exp_minutes">Minutes</string>

    <string name="time_exp_choose_work">Choose your work</string>

    <!--congratulations-->
    <string name="congratulations">Congratulations!</string>
    <string name="ur_invoice_has_been_sent">Your invoice has been sent</string>

    <!--projectType-->
    <string name="job">Job</string>
    <string name="project">Project</string>
    <string name="object">Object</string>
    <string name="order">Order</string>

    <!--Files-->
    <string name="delete_file_title">Delete file?</string>
    <string name="delete_file_message">The file will be deleted immediately</string>

    <!--customers-->
    <string name="customer_info">%d objects/ %d orders/ %d projects</string>
    <string name="project_date_start_date_end">%s - %s</string>
    <string name="order_delivery_time_and_address">%s, %s</string>

    <!--status-->
    <string name="active">Active</string>
    <string name="not_active">Not active</string>

    <!--Media menu-->
    <string name="media_menu_camera">Camera</string>
    <string name="media_menu_gallery">Gallery</string>

    <!--Tutoral-->
    <string name="skip_button">Skip</string>


</resources>
