<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/list_item_horizontal_padding"
    android:paddingRight="@dimen/list_item_horizontal_padding"
    android:paddingTop="18dp"
    android:paddingBottom="15dp">

    <android.support.v7.widget.AppCompatTextView
        android:textSize="24sp"
        android:textColor="@color/black"
        android:text="@string/create_new_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="18dp" />

    <android.support.v7.widget.AppCompatTextView
        android:textSize="15sp"
        android:textColor="@color/dark_gray"
        android:text="@string/enter_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/expenseName"
        app:backgroundTint="@color/blue"
        android:textSize="19sp"
        android:textColor="@color/black"
        android:textColorHint="@color/list_item_primary_text"
        android:hint="@string/placeholder_for_expense_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_gravity="right"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/cancel"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/cancel"
            app:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatTextView
            android:textColor="@color/dark_blue"
            android:id="@+id/create"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/create"
            app:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>