<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:paddingLeft="@dimen/list_item_horizontal_padding"
    android:paddingRight="@dimen/list_item_horizontal_padding">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
            android:maxLines="2"
            android:ellipsize="end"
            android:text="@string/placeholder_job_name"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:id="@+id/jobName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatTextView
            android:text="@string/placeholder_job_status"
            android:textColor="@color/list_item_secondary_text"
            android:id="@+id/jobStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="3dp" />

    <android.support.v7.widget.AppCompatTextView
        android:text="@string/placeholder_job_customer"
        android:id="@+id/jobCustomer"
        android:textColor="@color/list_item_secondary_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatTextView
        android:text="@string/placeholder_job_term"
        android:id="@+id/jobTerm"
        android:textColor="@color/list_item_secondary_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>