<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:text="@string/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_marginTop="7dp"
            android:layout_below="@id/title"
            android:background="?attr/colorPrimary"
            android:layout_alignLeft="@id/title"
            android:layout_alignStart="@id/title"
            android:layout_alignRight="@id/title"
            android:layout_alignEnd="@id/title"
            android:id="@+id/underline"
            android:layout_width="wrap_content"
            android:layout_height="4dp" />
    </RelativeLayout>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/name"
        android:textColorHint="?attr/dark_text_color"
        android:padding="7dp"
        android:hint="@string/login_name_hint"
        android:background="@drawable/dark_blue_rectangle"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <android.support.v7.widget.AppCompatEditText
        android:inputType="textPassword"
        android:id="@+id/password"
        android:textColorHint="?attr/dark_text_color"
        android:padding="7dp"
        android:hint="@string/password_hint"
        android:background="@drawable/dark_blue_rectangle"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <android.support.v7.widget.AppCompatButton
        android:textAllCaps="true"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:background="?attr/colorPrimary"
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <android.support.v7.widget.AppCompatTextView
        android:textColor="?attr/dark_text_color"
        android:textSize="17sp"
        android:text="@string/forgot_password"
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>