<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="100dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingLeft="@dimen/list_item_horizontal_padding"
        android:paddingRight="@dimen/list_item_horizontal_padding"
        android:paddingTop="18dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount_title"
            android:textColor="@color/black"
            android:textSize="24sp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/discount_dialog_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/discount_hint"
                android:textColor="@color/black"
                android:textColorHint="@color/list_item_primary_text"
                android:textSize="19sp"
                app:backgroundTint="@color/blue"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_ripple"
                android:text="@string/cancel"/>

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_ripple"
                android:text="@string/save"
                android:textColor="@color/dark_blue"/>

        </LinearLayout>

    </LinearLayout>
</merge>
