<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/list_item_horizontal_padding"
    android:paddingRight="@dimen/list_item_horizontal_padding"
    android:paddingTop="9dp"
    android:paddingBottom="9dp">

    <android.support.v7.widget.AppCompatTextView
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@drawable/rect_price_per_unit_background"
        android:layout_centerInParent="true"
        android:id="@+id/pricePerUnit"
        android:visibility="gone"
        android:text="@string/placeholder_price_per_unit"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatTextView
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginRight="5dp"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@id/pricePerUnit"
        android:id="@+id/expenseName"
        android:text="@string/placeholder_project_expense"
        android:textSize="18sp"
        android:textColor="@color/project_expense_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatTextView
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginLeft="5dp"
        android:layout_alignParentRight="true"
        android:layout_toLeftOf="@id/pricePerUnit"
        android:id="@+id/expenseTotalPrice"
        android:text="@string/placeholder_project_expense_price"
        android:textSize="18sp"
        android:textColor="@color/project_expense_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>