<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:tools="http://schemas.android.com/tools"
             android:background="@color/mainBackground"
             android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/emptyListPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="180dp"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                android:src="@drawable/data_placeholder"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_detail_completion"
                android:textColor="@color/dark_gray"/>

        </LinearLayout>

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="34dp"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/arrow_add_bottom_margin"
            android:layout_marginRight="@dimen/arrow_add_right_margin"
            android:adjustViewBounds="true"
            android:src="@drawable/arrow_add_material"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawablePadding="10dp"
            android:padding="15dp"
            tools:text="@string/placeholder_company"
            android:textColor="@color/project_expense_text"
            android:textStyle="bold"/>

        <com.example.paralect.easytime.views.EmptyRecyclerView
            android:id="@+id/activityList"
            style="@style/RecyclerViewPadding"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/detail_title"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@+id/detail_title"
            android:background="@drawable/shadow_from_top"/>

    </RelativeLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/materials_overlay_background"/>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fam"
        style="@style/FloatingActionButtonNormalStyle">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/action_send"
            style="@style/FloatingActionButtonMiniStyle"
            android:src="@drawable/ic_send"
            app:fab_label="@string/project_detail_send"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/action_save"
            style="@style/FloatingActionButtonMiniStyle"
            android:src="@drawable/ic_save"
            app:fab_label="@string/save"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/action_sign"
            style="@style/FloatingActionButtonMiniStyle"
            android:src="@drawable/ic_edit"
            app:fab_label="@string/project_detail_sign"/>

    </com.github.clans.fab.FloatingActionMenu>

</FrameLayout>